[project]
name = "llm-weather-app"
version = "0.1.0"
description = "Add your description here"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-ai>=0.8.1",
    "python-dotenv>=1.1.1",
]

[tool.uv]
default-groups = ["dev", "lint"]

[dependency-groups]
dev = []
lint = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [".venv",]

lint.select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade,
    "I",  # isort
]

[tool.mypy]
mypy_path = ["."]
files = ["."]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
